--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -71,7 +71,7 @@ const contact = await getEntry("config", "contact");
             src="https://web.cmbliss.com/webtools/hotline/js/hotline.js"
           ></script><script type="text/javascript">
             $("body").hotline({
-              phone: "PhoneNumber",
+              phone: "0798151939",
               p_right: true,
               p_bottom: true,
               bottom: 0,
